fpg-api/testing/fpg-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fpg-api
  namespace: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fpg-api
  template:
    metadata:
      labels:
        app: fpg-api
    spec:
      nodeName: fpg-worker
      containers:
        - name: fpg-api
          image: tobygaskell/fpg:testing
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
