fpg-api/testing/fpg-api-service.yaml
# fpg-api-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpg-api
  namespace: testing
spec:
  type: NodePort
  selector:
    app: fpg-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30002
