fpg-api/testing/ingress-config-testing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-ingress
  namespace: testing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "testing.fpg-app.com"
    secretName: "testing-ingress"
  ingressClassName: nginx
  rules:
  - host: testing.fpg-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fpg-api
            port:
              number: 80
